--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tomk79/broccoli-module-medias",
+    "name": "tomk79/broccoli-module-interview",
     "description": "",
     "keywords": ["broccoli","pickles2"],
     "license": "MIT",
@@ -16,9 +16,10 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "pickles2/px-fw-2.x": "^2.0",
-        "pickles2/px2-multitheme": "^2.0",
-        "pickles2/px2-px2dthelper": "^2.0"
+        "pickles2/px-fw-2.x": "dev-develop",
+        "pickles2/px2-multitheme": "dev-develop",
+        "pickles2/px2-px2dthelper": "dev-develop",
+        "tomk79/broccoli-module-std-document": "dev-develop"
     },
     "autoload": {
         "files": [
